# agnostic-orderbook

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
anchor/: Anchor.toml  package.json
anchor/programs/anchor-agnostic-orderbook/: Cargo.toml
anchor/programs/anchor-agnostic-orderbook/src/: aob.rs  lib.rs
anchor/programs/anchor-agnostic-orderbook/src/aob/: critbit.rs  error.rs  histbuf.rs  orderbook.rs  params.rs  state.rs  utils.rs
anchor/tests/: anchor-agnostic-orderbook.ts  eventQueue.ts
aob/: Cargo.toml
aob/src/: critbit.rs  error.rs  lib.rs  orderbook.rs  params.rs  state.rs  utils.rs
program/: Cargo.toml
program/src/: critbit.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  orderbook.rs  processor.rs  state.rs  utils.rs
program/src/processor/: cancel_order.rs  close_market.rs  consume_events.rs  create_market.rs  new_order.rs
program/tests/: functional.rs  integration.rs
program/tests/common/: utils.rs
