[package]
name = "agnostic-orderbook"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []
wasm = []
debug-asserts = []
lib = []
utils = []

[dependencies]
aob = { path = "../aob" }
solana-program = "=1.9.6"
borsh = "0.9.3"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
bonfida-utils = "0.2.2"
num-traits = "0.2.14"
num-derive = "0.3.3"

[dev-dependencies]
solana-sdk = "=1.9.6"
solana-client = "=1.9.6"
solana-logger = "=1.9.6"
solana-validator = "=1.9.6"
solana-program-test = "=1.9.6"
arrayref = "0.3.6"
tokio = { version = "1.16", features = ["macros"] }
anyhow = "1.0.53"
bytemuck = { version = "1.7.3", features = ["derive", "extern_crate_std"] }

[lib]
crate-type = ["cdylib", "lib"]
