[package]
name = "anchor-agnostic-orderbook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_agnostic_orderbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
aob = { path = "../../../aob" }
anchor-lang = "0.21.0"
bytemuck = "1.7.3"
num-traits = "0.2.14"

