[package]
name = "anchor-agnostic-orderbook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_agnostic_orderbook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
bonfida-utils = "0.2.2"
borsh = "0.9.3"
bytemuck = { version = "1.7.3", features = ["derive", "extern_crate_std"] }
enumflags2 = "0.7.1"
heapless = "0.7.10"
num-traits = "0.2.14"
num-derive = "0.3.3"
thiserror = "1.0.24"

[dev-dependencies]
solana-sdk = "=1.9.6"
solana-client = "=1.9.6"
solana-logger = "=1.9.6"
solana-validator = "=1.9.6"
solana-program-test = "=1.9.6"
arrayref = "0.3.6"
tokio = { version = "1.16", features = ["macros"] }
anyhow = "1.0.53"
